# lottogogo

./: .env.example  .gitignore  LICENSE  MVP_PLAN.md  PRD.md  README.md  backtest.py  ga_log.txt  history.csv  index.html  privacy.html  pyproject.toml  recommend.py  recommend_ml.py  run_ga.bat
.github/workflows/: ga-optimize.yml  lotto-history-update.yml  render-keepalive.yml
api/: recommend.js  robots.js  sitemap.js
assets/: recommend-worker.js
data/: ga_checkpoint.json  model.json  model_ga.json  model_xgb.json  optimized_weights.json  optimized_weights_no_hmm.json  xgb_best_params.json  xgb_feature_importance.json  xgb_model.pkl  xgb_model_metadata.json
docs/1/: ARCHITECTURE.md  MODULE_TREE.txt  TRD.md
docs/2/: API_SPEC.md  DATA_MODEL.md  ERRORS.md
docs/3/: PLAN.md  RELEASE_CHECKLIST.md  TEST_PLAN.md
docs/final/: API_SPEC.md  BACKLOG.md  OPEN_QUESTIONS.md  PLAN.md  RESULT.md  SPRINT1_RESULT.md  SPRINT2_RESULT.md  SPRINT3_RESULT.md  SPRINT4_RESULT.md  TRD.md
pipeline_prompts/: FINAL_QA_RELEASE.prompt  IMPLEMENT_SPRINT1.prompt  IMPLEMENT_SPRINT{N}.prompt  SPRINT_QA.prompt
pipeline_prompts/docs/: 0_PROCESS_CONCERNS.md  1_AGENT_TRD.prompt  2_AGENT_API.prompt  3_AGENT_PLAN.prompt  FINAL_BACKLOG.prompt  FINAL_MERGE.prompt
scripts/: build_frontend_model.py  export_vercel_index.sh  update_history_csv.py
src/lottogogo/: __init__.py
tests/unit/: test_backtester.py  test_base_score_calculator.py  test_booster.py  test_config_loader.py  test_data_fetcher.py  test_data_loader.py  test_filter_pipeline.py  test_filters.py  test_fitness.py  test_ga_optimizer.py  (+9 more)
(+42 files in other folders)
